# unnamed-platformer

./: CMakeLists.txt
assets/levels/: development_level.map_layout  doc.txt
src/: main.c  main.cpp
src/entity/: player.c  player.h
src/entity/player/: player.c  player.h
src/game/: camera.c  camera.cpp  camera.h  camera.hpp  main_loop.c  main_loop.cpp  main_loop.h
src/game/entity/player/: player.c  player.h
src/game/physics/: physics.c  physics.h
src/internal/: animation.c  animation.h  image.c  image.cpp  image.h  image.hpp  input.cpp  input.hpp  internals.c  internals.cpp  internals.h  internals.hpp
src/math/: transform.h  vector.h
